--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-data/services/okx_withdraw_list.json
+data/services/cex_withdraw_list.json
 data/accounts_data.xlsx
 *.xlsx
 test.py
 *.pyc
+data/accounts_data.xlsx
